# l2-l1-rent-analysis

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
.orchestrator/: AGENTS.md  README.md  workstreams.md
.orchestrator/backlog/: README.md  T020_define_panel_schema_and_data_dictionary.md  T030_growthepie_etl_snapshot_and_golden_sample.md  T040_metrics_str_module_and_tests.md  T050_validation_vendor_panel_checks.md  T060_analysis_str_timeseries_figure.md
.orchestrator/blocked/: README.md
.orchestrator/done/: T000_protocol_lock.md  T005_define_workstreams.md  T010_initialize_repo_skeleton.md  T015_expand_quality_gates.md
.orchestrator/handoff/: H023_swarm_template_review_fixes.md
.orchestrator/templates/: task_template.md  task_template_w0_protocol.md  task_template_w1_w2_etl.md  workstreams_template.md
contracts/: CHANGELOG.md  README.md  data_dictionary.md  decisions.md  project.yaml
contracts/schemas/: README.md  panel_schema.yaml  panel_schema_decomp_v1.yaml  panel_schema_str_v1.yaml
data/: AGENTS.md
docs/: AGENTS.md  autonomous_agentic_research_workflow_roadmap.md  discussion_on_building_autonomous_AI_agents_research_workflow.md  end_to_end_data_collection_plan.md  end_to_end_research_plan.md  protocol.md  runbook_swarm.md  runbook_swarm_automation.md  tmp.md
registry/: AGENTS.md  CHANGELOG.md  README.md  rollup_registry_v1.csv
reports/: catalog.yaml
scripts/: make_raw_manifest.py  quality_gates.py  swarm.py  sweep_tasks.py
src/etl/: AGENTS.md
tests/: test_smoke.py
(+17 files in other folders)
