[project]
name = "l2-l1-rent-analysis"
version = "0.0.0"
description = "Research repo: L2→L1 rent capture analysis and reusable agentic research workflow skeleton."
requires-python = ">=3.11"
dependencies = []

[tool]
# Keep tooling configuration minimal at bootstrap. Add linters/test runners when introduced.
